@@ -225,6 +225,12 @@ Documentation
 
 - Issue #14034: added the argparse tutorial.
 
+Tools/Demos
+-----------
+
+- Issue #14965: Fix missing support for starred assignments in
+  Tools/parser/unparse.py.
+
 
 What's New in Python 3.2.3 release candidate 2?
 ===============================================
